--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
 
       <div class="albumArt">
         <img class="pic1" src="">
-      </div>
-      <div class="albumArt">
         <img class="pic2" src="">
       </div>
+
+      <div class ="button-row">
+        <button id="buttonPic1">Picture 1</button>
+        <button id="buttonPic2">Picture 2</button>
+        <button id="bio">bio</button>
+      </div>
+
       <div id="estab">
 
       </div>
