--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Music carousel</title>
+    <title>Music Directory</title>
   </head>
   <body>
     <div class="bannerPic">
@@ -16,7 +16,7 @@
     </div>
     <div class="userInput">
       <form>
-  	     <input class="searchBar "type="text" placeholder="Band Name"/>
+  	     <input class="searchBar "type="text" placeholder="ex: The Band"/>
   	     <input class="searchBtn" type="submit" value="Search Band" />
       </form>
     </div>
@@ -26,24 +26,18 @@
 
       <div id="estab">
 
-      </div>
-      <div class ="button-row">
-        <button id="buttonPic1">Picture 1</button>
-        <button id="buttonPic2">Picture 2</button>
-        <button id="bio">bio</button>
-      </div>
-
     </div>
     <div class="carousel">
 
       <div class="albumArt">
-        <div class="">
 
-        </div>
         <img class="pic1" src="">
         <img class="pic2" src="">
         <div class="bio"></div>
       </div>
+      <ul id="list">
+
+      </ul>
 
 
 
