--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="app.js" charset="utf-8"></script>
+    <script src="second.js" charset="utf-8"></script>
     <link rel="stylesheet" href="main.css">
     <title>Music Directory</title>
   </head>
