--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="userInput">
       <form>
-  	     <input class="searchBar "type="text" placeholder="ex: The Band"/>
+  	     <input class="searchBar "type="text" placeholder="ex: Cage the Elephant"/>
   	     <input class="searchBtn" type="submit" value="Search Band" />
       </form>
     </div>
@@ -30,16 +30,14 @@
     <div class="carousel">
 
       <div class="albumArt">
-
+        <div class="placeholder">
+          <h2>Click here for photos and bio</h2> </div>
         <img class="pic1" src="">
         <img class="pic2" src="">
         <div class="bio"></div>
       </div>
-      <ul id="list">
-
-      </ul>
-
-
+      </div>
+    <div id="disco">
 
     </div>
   </body>
