fixed a bit of stuff

--- a/index.html
+++ b/index.html
@@ -37,8 +37,19 @@
         <div class="bio"></div>
       </div>
       </div>
-    <div id="disco">
+    <div id="disco" class="disco">
+      <div id="myModal" class="modal">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <h2>Discography</h2>
+        </div>
+        <div class="modal-body">
+          <ul class="discoList">
 
+          </ul>
+        </div>
+      </div>
     </div>
+
   </body>
 </html>
